@@ -265,9 +265,9 @@ private $allowed;
 // STATE
 	private function isSlashed($pre=false){
 		if($pre)
-			return (($this->previous['prelast'] == '\\') && ($this->previous['sequence'] % 2 == 1));
+			return $this->previous['prelast'] == '\\';
 		else
-			return (($this->previous['last'] == '\\') && ($this->symbols['sequence'] % 2 == 1));
+			return $this->previous['last'] == '\\';
 	}
 
 	private function inQuotes($symbol=''){
@@ -401,8 +401,6 @@ private $allowed;
 		if($this->currExpr['part']['itemParam'] || $this->currExpr['part']['functionParam']){
 			if($this->inParameter()){
 				if($this->inQuotes()){
-// SDI('Open.inParameter.inQuotes: '.$symbol.' ');
-
  					if(($symbol == '"') && !$this->isSlashed(true)){
 						$this->symbols['params'][$symbol]++;
 						$this->currExpr['params']['quoteClose'] = true;
@@ -411,7 +409,6 @@ private $allowed;
 					$this->writeParams($symbol);
 				}
 				else{
-// SDI('Open.inParameter: '.$symbol.' ');
 					if(($symbol == ']') && $this->currExpr['part']['itemParam'])
 						$this->symbols['params'][$symbol]++;
 					else if(($symbol == ')') && $this->currExpr['part']['functionParam']){
