@@ -671,7 +671,7 @@ class class_triggerexpressionTest extends PHPUnit_Framework_TestCase{
 
 			array('{host:key.str("\")}=0',false),
 			array('{host:key.str("\"")}=0',true),
-			array('{host:key.str("\\"")}=0',true),
+			array('{host:key.str("\\\\"")}=0',true),
 			array('{host:key.str("\""")}=0',false),
 			array('{host:key.str("\"""")}=0',false),
 
@@ -770,7 +770,7 @@ class class_triggerexpressionTest extends PHPUnit_Framework_TestCase{
 			array('0={host:key["a"b].str()}', false),
 			array('0={host:key[].str(a"b"c)}', true),
 			array('0={host:key[].str("a\"b\"c")}', true),
-			array('0={host:key[].str("a\\"b\\"c")}', true),
+			array('0={host:key[].str("a\\\\"b\\\\"c")}', true),
 			array('0={host:key[].str("a"b)}', false),
 			array('0={host:key[].str(,"a"b,)}', false),
 			array('0={host:key[].str("","a"b,"")}', false),
@@ -1341,7 +1341,7 @@ class class_triggerexpressionTest extends PHPUnit_Framework_TestCase{
 		}
 		else {
 //			print_r($trigger->errors);
-			$this->assertEquals($b,false,$trigger->errors[0]);
+			$this->assertEquals($b, false, "\nError with expression $a: ".$trigger->errors[0]);
 		}
 	}
 }
