@@ -133,6 +133,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.6rc1
 
+ - [ZBX-3746] Fixed parsing of trigger expressions containing \\ (KB)
  - [ZBX-3681] fixed API to leave internal PHP encoding in UTF-8 (Alexei)
  - [ZBX-3353] fixed skipping web items in the host "Full clone" operation (Sasha)
  - [ZBX-3503] fixed "incorrect usage of quotes" error (KB)
